유튜브 메뉴 추가

--- a/main/templates/main/admin.html
+++ b/main/templates/main/admin.html
@@ -147,6 +147,7 @@
               <li><a href="#">주일예배</a></li>
               <li><a href="#">수요예배</a></li>
               <li><a href="#">새벽기도회</a></li>
+              <li><a href="#">유튜브</a></li>
             </ul>
           </li>
         </ul>
