--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -30,7 +30,7 @@
             <a href="#">교회소식</a>
             <ul class="submenu">
               <li><a href="/notice.html">공지사항</a></li>
-              <li><a href="#">주보</a></li>
+              <li><a href="/sermon.html">주보</a></li>
               <li><a href="#">새가족</a></li>
             </ul>
           </li>
