--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,6 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/form.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/templates/main/apple-icon-76x76.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/templates/main/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="48x48"
+      href="/templates/main/android-icon-48x48.png"
+    />
+    <link rel="shortcut icon" href="/templates/main/favicon.ico" />
     <title>한사랑교회 홈페이지</title>
   </head>
   <body>
