--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -10,21 +10,21 @@
     <link
       rel="apple-touch-icon"
       sizes="76x76"
-      href="/templates/main/apple-icon-76x76.png"
+      href="/public/images/apple-icon-76x76.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="/templates/main/favicon-96x96.png"
+      href="/public/images/favicon-96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="48x48"
-      href="/templates/main/android-icon-48x48.png"
+      href="/public/images/android-icon-48x48.png"
     />
-    <link rel="shortcut icon" href="/templates/main/favicon.ico" />
+    <link rel="shortcut icon" href="/public/images/favicon.ico" />
     <title>한사랑교회 홈페이지</title>
   </head>
   <body>
