서브메뉴 다시 조정1

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -11,24 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/public/images/apple-icon-76x76.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/public/images/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="/public/images/android-icon-48x48.png"
-    />
-    <link rel="shortcut icon" href="/public/images/favicon.ico" />
+    <link rel="icon" href="/public/images/favicon.ico" />
     <title>한사랑교회 홈페이지</title>
   </head>
   <body>
@@ -49,11 +32,7 @@
           <li><a href="#">예배</a></li>
         </ul>
       </nav>
-      <div class="user-menu-icons">
-        <a href="#" class="user-icon-link">
-          <i class="fas fa-lock"></i>
-        </a>
-      </div>
+      <div class="user-menu-icons"></div>
     </header>
 
     <div id="user-modal" class="modal">
